--- a/huddle-landing/styles.css
+++ b/huddle-landing/styles.css
@@ -8,7 +8,9 @@
   font-weight: 400;
   font-style: normal;
 
-  font-size: 13px;
+  font-size: 3.5vw;
+  /* font-size: 4.3vw; */
+
   color: white;
 }
 
@@ -45,7 +47,8 @@ h1 {
 }
 
 p {
-  line-height: 1.5rem;
+  font-size: 1.24rem;
+  line-height: 1.7rem;
 }
 
 .description {
