--- a/huddle-landing/styles.css
+++ b/huddle-landing/styles.css
@@ -66,6 +66,11 @@ p {
   box-shadow: 2px 4px 4px rgba(0, 0, 0, 0.2);
 }
 
+.cta:hover {
+  background-color: var(--accent);
+  color: white;
+}
+
 footer {
   display: flex;
   flex-direction: column;
@@ -98,7 +103,7 @@ footer > p > a {
   color: var(--accent);
 }
 
-@media screen and (min-width: 600px) {
+@media screen and (min-width: 1024px) {
   body {
     background: var(--primary) url('./images/bg-desktop.svg') no-repeat center
       center / cover;
@@ -107,8 +112,7 @@ footer > p > a {
   #logo {
     margin-bottom: 10%;
   }
-  .container {
-  }
+
   main {
     display: flex;
     flex-direction: row;
@@ -148,7 +152,6 @@ footer > p > a {
     text-align: right;
   }
   footer > ul > li > a {
-    /* display: none; */
     font-size: 0.6rem;
   }
 }
