--- a/huddle-landing/styles.css
+++ b/huddle-landing/styles.css
@@ -112,7 +112,10 @@ footer > p > a {
   #logo {
     margin-bottom: 10%;
   }
-
+  .container {
+    max-width: 1400px;
+    margin: 0 auto;
+  }
   main {
     display: flex;
     flex-direction: row;
