--- a/huddle-landing/styles.css
+++ b/huddle-landing/styles.css
@@ -105,18 +105,15 @@ footer > p > a {
 
 @media screen and (min-width: 1024px) {
   body {
-    background: var(--primary) url('./images/bg-desktop.svg') no-repeat center
-      center / cover;
+    background: var(--primary) url('./images/bg-desktop.svg') no-repeat;
+    background-size: contain;
     min-height: 100vh;
   }
   #logo {
-    margin-top: 3%;
-    margin-bottom: 8%;
+    margin-top: 5%;
+    margin-bottom: 10%;
   }
   .container {
-    /* max-width: 1440px;
-    max-height: 900px; */
-    /* margin: 0 auto; */
     height: 100%;
   }
 
@@ -145,7 +142,7 @@ footer > p > a {
     padding: 3% 12%;
   }
   .art {
-    flex: 1.8;
+    flex: 1.3;
     margin-bottom: 0;
   }
   .description {
