added desktop version of recipe page

--- a/challenges/recipe-page/assets/style.css
+++ b/challenges/recipe-page/assets/style.css
@@ -4,6 +4,7 @@
 
   font-style: normal;
   font-size: 16px;
+  --mx: 11%;
 
   --white: hsl(0, 0%, 100%);
   --stone-100: hsl(30, 54%, 90%);
@@ -55,7 +56,7 @@ hr {
 
 main {
   background-color: var(--white);
-  margin: 0 11%;
+  margin: 0 var(--mx);
 }
 
 table {
@@ -70,7 +71,7 @@ td {
   padding: 12px;
 }
 
-.hero-art {
+.art {
   width: 100%;
 }
 
@@ -79,10 +80,36 @@ td {
 }
 
 footer {
-  margin: 40px 11%;
+  margin: 40px var(--mx);
 }
 
 footer a {
   text-decoration: none;
   color: var(--brown-800);
+}
+.container {
+  background-color: var(--white);
+}
+
+@media screen and (min-width: 375px) {
+  body {
+    background-color: var(--stone-100);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .container {
+    margin: var(--mx);
+    border-radius: 20px;
+    max-width: 600px;
+  }
+
+  .art-container {
+    margin: var(--mx);
+  }
+
+  .art {
+    border-radius: 20px;
+  }
 }
