--- a/challenges/product-preview-card/assets/style.css
+++ b/challenges/product-preview-card/assets/style.css
@@ -9,7 +9,7 @@
   --white: hsl(0, 0%, 100%);
   --light-blue: hsl(228, 12%, 48%);
   --dark-blue: hsl(212, 21%, 14%);
-  font-size: 16px;
+  font-size: 12px;
 }
 
 body {
@@ -21,6 +21,7 @@ body {
   background-color: var(--background);
 
   color: var(--light-blue);
+  font-size: clamp(1rem, 0.75rem + 1.5vw, 2rem);
 }
 main {
   display: flex;
@@ -31,11 +32,17 @@ main {
 }
 section.product-card {
   background-color: var(--white);
-  width: 350px;
+  max-width: 300px;
+  margin: 2rem;
+  border-radius: 10px;
 }
 
-section .art {
+section .art img {
   max-inline-size: 100%;
+  block-size: auto;
+  object-fit: cover;
+  height: 100%;
+  border-radius: 10px 10px 0 0;
 }
 
 section.product-card h1 {
@@ -50,29 +57,33 @@ section.product-card .category {
 }
 
 section.product-card article {
-  padding: 1rem;
+  padding: 1.5rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
 }
 
 section.product-card p.product-description {
-  font-size: 0.95rem;
+  /* font-size: 0.75rem; */
   line-height: 1.6;
 }
 
 section.product-card .price {
   display: flex;
   flex-direction: row;
-  gap: 1.5rem;
+  justify-content: baseline;
+  gap: 1rem;
 }
 
 section.product-card .actual-price {
   font-family: 'Fraunces', sans-serif;
-  font-size: 2rem;
+  font-size: 3rem;
   font-weight: 700;
   color: var(--accent);
 }
 
 section.product-card .before-price {
-  font-size: 0.9rem;
+  font-size: 1.2srem;
 }
 
 section.product-card button {
@@ -83,7 +94,6 @@ section.product-card button {
   border-radius: 8px;
   color: var(--white);
   font-weight: 700;
-  font-size: 0.8rem;
 
   display: flex;
   flex-direction: row;
@@ -103,4 +113,16 @@ section.product-card button:hover {
   display: inline-block;
   height: 1rem;
   width: 1rem;
+}
+
+@media screen and (min-width: 550px) {
+  section.product-card {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    max-width: 800px;
+  }
+
+  section .art img {
+    border-radius: 10px 0 0 10px;
+  }
 }
