--- a/assets/style.css
+++ b/assets/style.css
@@ -1,8 +1,15 @@
 main {
   display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+section {
+  display: flex;
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: space-around;
+  gap: 20px;
 }
 
 article {
