--- a/challenges/qr-code-component/assets/styles.css
+++ b/challenges/qr-code-component/assets/styles.css
@@ -1,11 +1,3 @@
-.attribution {
-  font-size: 11px;
-  text-align: center;
-}
-.attribution a {
-  color: hsl(228, 45%, 44%);
-}
-
 :root {
   --primary: #1f314f;
   --secondary: #68778d;
@@ -19,8 +11,8 @@
 }
 
 body {
-  font-family: 'Outfit', sans-serif;
   font-weight: 500;
+  font-family: Outfit, sans-serif;
   background-color: var(--bg);
 }
 
@@ -33,41 +25,46 @@ main {
 }
 
 .qr {
+  max-width: 320px;
   margin: var(--space-200);
   padding: var(--space-200) var(--space-200) var(--space-500) var(--space-200);
-  border-radius: 20px;
-  background-color: #fff;
-  box-shadow: 5px 15px 10px 2px rgba(0, 0, 0, 0.1);
-  max-width: 320px;
   text-align: center;
+  background-color: #fff;
+  border-radius: 20px;
+  box-shadow: 5px 15px 10px 2px rgba(0 0 0 0.1);
 }
 
-.qr__art {
-  /* max-width: 100%; */
-}
+/* .qr__art {
+  max-width: 100%;
+} */
 
 .has-radius {
   border-radius: 10px;
 }
 
 .qr__title {
+  margin-top: var(--space-300);
+  margin-bottom: var(--space-200);
+  color: var(--primary);
   font-weight: 700;
   font-size: 1rem;
   line-height: 1.2;
-  letter-spacing: 0rem;
-  color: var(--primary);
-  margin-top: var(--space-300);
-  margin-bottom: var(--space-200);
+  letter-spacing: 0;
 }
 
 .qr__description {
+  color: var(--secondary);
   font-size: 1rem;
   line-height: 1.4;
   letter-spacing: 0.0125rem;
-  color: var(--secondary);
 }
 
 .attribution {
   position: relative;
   font-size: 1rem;
+  text-align: center;
+}
+
+.attribution a {
+  color: hsl(228deg 45% 44%);
 }
