--- a/challenges/qr-code-component/assets/styles.css
+++ b/challenges/qr-code-component/assets/styles.css
@@ -39,8 +39,7 @@ main {
 }
 
 .qr__title {
-  margin-top: var(--space-300);
-  margin-bottom: var(--space-200);
+  margin-block: var(--space-300) var(--space-200);
   color: var(--primary);
   font-weight: 700;
   line-height: 1.2;
