social links profile: refactor use logical operators

--- a/challenges/social-links-profile/assets/style.css
+++ b/challenges/social-links-profile/assets/style.css
@@ -46,7 +46,7 @@ body {
 
 .social__avatar {
   max-inline-size: 5em;
-  margin-top: var(--space-200);
+  margin-block-end: var(--space-200);
   border-radius: 50%;
 }
 
@@ -60,8 +60,7 @@ body {
 }
 
 .social__header--location {
-  margin-top: var(--space-100);
-  margin-bottom: var(--space-300);
+  margin-block: var(--space-100) var(--space-300);
   color: var(--green);
   font-weight: 700;
   font-size: 1.1em;
@@ -73,7 +72,7 @@ body {
 
 .social__links {
   width: 100%;
-  margin-top: var(--space-200);
+  margin-block-start: var(--space-200);
 }
 
 .social__links--list {
@@ -103,7 +102,7 @@ body {
 
 .footer {
   position: relative;
-  margin-top: 20px;
+  margin-block-start: 20px;
 }
 
 .footer__attribution--link {
