social links profile: refactor: combined hover and focus in a shortcut

--- a/challenges/social-links-profile/assets/style.css
+++ b/challenges/social-links-profile/assets/style.css
@@ -94,7 +94,7 @@ body {
   border-radius: 5px;
 }
 
-.social__links--list-item--link:hover {
+.social__links--list-item--link:is(:hover, :focus) {
   color: var(--grey-900);
   background-color: var(--green);
   cursor: pointer;
